[package]
name = "rust_blog"
version = "0.1.0"
authors = ["QWYNG <ikusawasi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.1.0"
anyhow = "1.0.33"
askama = "0.10.3"
chrono = "0.4.19"
